[tool.poetry]
name = "audiobook-movie-bot"
version = "0.1.0"
description = "Telegram bot for audiobooks and movies catalog"
authors = ["Konstantin <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.4.1"
aiohttp = "3.9.5"
telethon = "1.34.0"
yt-dlp = "2024.12.31"
python-dotenv = "1.0.1"
requests = "2.33.1"
schedule = "1.2.2"
pydantic = "2.5.3"
pydantic-core = "2.14.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

